Aktualizacja ścieżek dla Tomcata Aktualizacja readme